--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "ebooklib>=0.18",
     "epubcheck>=5.1.0",
+    "rich>=13.9.4",
 ]
 
 [dependency-groups]
